--- a/sass/layots/_modal.scss
+++ b/sass/layots/_modal.scss
@@ -1,9 +1,14 @@
 .backdrop {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    position: fixed;
+position: fixed;
     top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    z-index: 2;
+        overflow-y: scroll;
+        padding: 93px 15px;
     transition: opacity 300ms linear, visibility 300ms linear;
 }
 
@@ -19,6 +24,15 @@
     transform: translate(-50%, -50%) rotate(0);
     transition: transform 400ms linear, border-radius 500ms linear;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
+    @media screen and (min-width: 375px) and (max-width: 1199.5px) {
+            max-height: 609px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            max-height: 581px;
+            max-width: 528px;
+        }
 }
 
 .backdrop.is-hidden {
@@ -182,6 +196,13 @@
             border: none;
             background-image: url(../images/icon-check.svg);
         }
+                  @media screen and (min-width: 375px) and (max-width: 479.5px) {
+                      width: 20px;
+                  }
+        
+                  @media screen and (min-width: 480px) {
+                      width: 16px;
+                  }
 }
 
 
