--- a/sass/layots/_what-we-do.scss
+++ b/sass/layots/_what-we-do.scss
@@ -1,6 +1,13 @@
 .section-padding {
     padding-top: 0;
+    display: none;
+  
+@media screen and (min-width: 1200px) {
+        display: flex;
+    }
 }
+
+
 
 .activity {
     display: flex;
