--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ h6 {
 
 ul,
 li {
-  margin: 0;
   padding-left: 0;
   list-style: none;
 }
@@ -172,130 +171,294 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section__title {
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.17;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 42px;
+  letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .section-team {
   background-color: var(--section-team-color);
 }
 
-.page-header {
+.header {
   border-bottom: 1px solid #ececec;
 }
-.page-header::after {
-  content: " ";
-  width: 1600px;
-  height: 1px;
-  background-color: var(--line-color);
-  display: block;
+
+.site-nav__logo {
+  color: #000000;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .site-nav__logo {
+    margin-right: 88px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .site-nav__logo {
+    font-size: 26px;
+    line-height: 1.2;
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
-.main-nav {
+.header-links {
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .header-links {
+    width: 100%;
+  }
+}
+
+.header__nav {
   display: flex;
   align-items: center;
 }
 
 .site-nav {
-  display: flex;
-  margin-left: 92px;
-  gap: 50px;
+  margin-bottom: 64px;
+}
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+  }
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .site-nav__list {
+    display: flex;
+    margin-bottom: 0;
+  }
 }
 
 .site-nav__link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--title-text-color);
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 30px;
+  line-height: 1.18;
   letter-spacing: 0.02em;
+  text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.site-nav__link:hover, .site-nav__link:focus {
-  color: var(--button-bacground-color);
+@media screen and (min-width: 425px) {
+  .site-nav__link {
+    font-size: 40px;
+  }
 }
-.site-nav__link.current {
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+.site-nav__link--current {
   position: relative;
-  color: var(--button-bacground-color);
-}
-.site-nav__link.current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 4px;
-  width: 100%;
-  border-radius: 2px;
-  background-color: var(--button-bacground-color);
-}
-.site-nav__link:hover, .site-nav__link.link:focus {
-  color: var(--button-bacground-color);
-}
-.site-nav__link.current {
-  position: relative;
-  color: var(--button-bacground-color);
-}
-.site-nav__link.current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 4px;
-  width: 100%;
-  border-radius: 2px;
-  background-color: var(--button-bacground-color);
-}
-
-.contacts {
-  display: flex;
-  margin-left: auto;
-  gap: 50px;
+  color: var(--accent-hover-color);
   text-decoration: none;
 }
-.contacts__item {
-  width: 100%;
-  height: 100%;
+@media screen and (min-width: 768px) {
+  .site-nav__link--current::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    border-radius: 2px;
+    background-color: var(--accent-hover-color);
+  }
 }
-.contacts__link {
+.site-nav__link:focus, .site-nav__link:hover {
+  color: var(--accent-hover-color);
+}
+
+@media screen and (max-width: 767.5px) {
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 767.5px) {
+  .header__contact {
+    margin-top: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767.5px) {
+  .contact-info {
+    margin-bottom: 64px;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 32px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .contact-info {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-info {
+    display: flex;
+  }
+}
+
+.contact-info__link:focus,
+.contact-info__link:hover {
+  color: var(--accent-hover-color);
+}
+
+.contact-info__link {
   display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts__link:hover, .contacts__link:focus {
-  color: var(--hover-contacts-icon-color);
+@media screen and (min-width: 425px) {
+  .contact-info__link {
+    font-size: 34px;
+  }
 }
-.contacts__icon {
+@media screen and (min-width: 768px) {
+  .contact-info__link {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-info__link {
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-bottom: 0;
+    align-items: center;
+  }
+}
+
+.contact-info__icon {
+  display: flex;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-info__icon-mail, .contact-info__icon-tel {
   margin-right: 10px;
   fill: currentColor;
 }
-
-.hero {
-  text-align: center;
-  background: var(--accent-bacground-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
+@media screen and (max-width: 767.5px) {
+  .contact-info__icon-mail, .contact-info__icon-tel {
+    display: none;
+  }
 }
+.contact-info__icon:hover, .contact-info__icon:focus {
+  color: var(--logo-text-color);
+}
+@media screen and (min-width: 768px) {
+  .contact-info__icon {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .contact-info__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-info__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.contact__social {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+@media screen and (min-width: 768px) {
+  .contact__social {
+    display: none;
+  }
+}
+
+.contact__link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--logo-text-color);
+  text-decoration: none;
+}
+@media screen and (min-width: 425px) {
+  .contact__link {
+    font-size: 18px;
+  }
+}
+
+.contact__item {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.contact__item:last-child {
+  margin-right: 0px;
+  padding-right: 0px;
+  border: none;
+}
+
 .hero__title {
   max-width: 360px;
   font-weight: 900;
@@ -316,7 +479,7 @@ body {
 
 .overlay {
   text-align: center;
-  padding-top: 200px;
+  padding: 118px 0;
   max-width: 1600px;
   height: 400px;
   margin-left: auto;
@@ -392,6 +555,8 @@ body {
 .features {
   display: flex;
   gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .features__item {
   width: 270px;
@@ -421,6 +586,12 @@ body {
 
 .section-padding {
   padding-top: 0;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .section-padding {
+    display: flex;
+  }
 }
 
 .activity {
@@ -450,24 +621,46 @@ body {
 }
 
 .section-team {
-  padding: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .team-list {
-  display: flex;
-  gap: 30px;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 .team-list__item {
+  max-width: 450px;
   background: var(--bacground-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.team-wrap {
+@media screen and (max-width: 767.5px) {
+  .team-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    width: 270px;
+  }
+}
+.team-list .team-wrap {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.team-wrap__title {
+.team-list .team-wrap__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -475,7 +668,7 @@ body {
   color: var(--title-text-color);
   margin-bottom: 10px;
 }
-.team-wrap__text {
+.team-list .team-wrap__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -483,7 +676,7 @@ body {
   color: var(--primary-text-color);
   margin-bottom: 16px;
 }
-.team-wrap__item {
+.team-list .team-wrap__item {
   background: var(--bacground-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -518,18 +711,16 @@ body {
 
 .client-list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
-}
-.client-list__item {
-  width: calc((100% - 150px) / 6);
-  height: 92px;
 }
 .client-list__link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 210px;
+  height: 92px;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   fill: var(--icon-color);
@@ -539,6 +730,16 @@ body {
   border: 1px solid var(--hover-bacground-color);
   fill: var(--hover-bacground-color);
 }
+@media screen and (min-width: 768px) {
+  .client-list__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .client-list__link {
+    width: 170px;
+  }
+}
 
 .footer {
   background: var(--accent-bacground-color);
@@ -546,16 +747,54 @@ body {
   padding-bottom: 60px;
 }
 
-.footer-wrap {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .footer-tablet {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-tablet {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
-.wrap {
-  margin-right: 70px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.footer-wrap {
+  display: block;
+  text-align: center;
+  gap: 60px;
+}
+@media screen and (max-width: 767.5px) {
+  .footer-wrap {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-wrap {
+    display: flex;
+    align-items: baseline;
+    text-align: start;
+  }
+}
+
+@media screen and (max-width: 767.5px) {
+  .wrap {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .wrap {
+    margin-left: 76px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .wrap {
+    margin-bottom: 0;
+    margin-right: 70px;
+  }
 }
 
 .address {
@@ -590,7 +829,17 @@ body {
 
 /*Fotter social*/
 .footer-social {
-  margin-right: auto;
+  margin-left: auto;
+}
+@media screen and (max-width: 767.5px) {
+  .footer-social {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .footer-social {
+    margin-left: auto;
+  }
 }
 .footer-social__title {
   margin-bottom: 20px;
@@ -629,9 +878,16 @@ body {
 }
 
 /*footer mail*/
-.mailing {
-  margin-left: 93px;
-  justify-content: flex-end;
+@media screen and (max-width: 767.5px) {
+  .mailing {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mailing {
+    margin-left: auto;
+  }
 }
 .mailing__text {
   margin-bottom: 20px;
@@ -640,18 +896,28 @@ body {
   font-weight: 700;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  text-align: left;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .mailing__text {
+    text-align: start;
+  }
 }
 .mailing__form {
-  display: flex;
-  align-items: flex-end;
+  width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .mailing__form {
+    display: flex;
+    align-items: flex-end;
+  }
 }
 .mailing__lable {
   display: flex;
   flex-direction: column;
 }
 .mailing__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding: 8px;
   font-family: inherit;
@@ -663,6 +929,24 @@ body {
   color: rgba(255, 255, 255, 0.6);
   letter-spacing: 0.03em;
   padding: 15px 16px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .mailing__input {
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
+  }
+}
+@media screen and (max-width: 1199.5px) {
+  .mailing__input {
+    margin-bottom: 20px;
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mailing__input {
+    width: 358px;
+  }
 }
 .mailing__icon {
   width: 24px;
@@ -688,16 +972,27 @@ body {
   padding: 10px 28px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 1200px) {
+  .mailing__button {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 .mailing__button:focus, .mailing__button:hover {
   background-color: var(--accent-hover-color);
 }
 
 .backdrop {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  z-index: 2;
+  overflow-y: scroll;
+  padding: 93px 15px;
   transition: opacity 300ms linear, visibility 300ms linear;
 }
 
@@ -713,6 +1008,17 @@ body {
   transform: translate(-50%, -50%) rotate(0);
   transition: transform 400ms linear, border-radius 500ms linear;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 375px) and (max-width: 1199.5px) {
+  .modal {
+    max-height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-height: 581px;
+    max-width: 528px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -883,6 +1189,16 @@ body {
   border: none;
   background-image: url(../images/icon-check.svg);
 }
+@media screen and (min-width: 375px) and (max-width: 479.5px) {
+  .icon__checkbox {
+    width: 20px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .icon__checkbox {
+    width: 16px;
+  }
+}
 
 .portfolio {
   display: flex;
@@ -940,4 +1256,71 @@ body {
 .text-top-wrap {
   position: relative;
   overflow: hidden;
+}
+
+.menu-toggle {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.menu-toggle:focus, .menu-toggle:hover {
+  fill: #2196f3;
+}
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle__close {
+  display: none;
+}
+
+.menu-toggle.is-open .menu-toggle__close {
+  display: block;
+}
+
+.menu-toggle.is-open .menu-toggle__open {
+  display: none;
+}
+
+.header-links {
+  display: flex;
+  width: 100%;
+}
+.header-links.is-open ~ .menu-toggle .menu-toggle__close {
+  display: block;
+}
+.header-links.is-open ~ .menu-toggle .menu-toggle__open {
+  display: none;
+}
+@media screen and (max-width: 767.5px) {
+  .header-links {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding: 48px 40px;
+    background-color: white;
+    transform: translateY(-100%);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 768px) {
+  .header-links {
+    align-items: center;
+  }
+}
+
+.header-links.is-open {
+  transform: translateX(0);
 }/*# sourceMappingURL=main.css.map */
