--- a/sass/components/_sections.scss
+++ b/sass/components/_sections.scss
@@ -1,13 +1,26 @@
 .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 94px;
+    }
     
     &__title {
-            margin-bottom: 50px;
-            font-size: 36px;
-            line-height: 1.17;
+            margin-bottom: 30px;
+            font-weight: 700;
+            font-size: 28px;
+            line-height: 42px;
+            letter-spacing: 0.03em;
             text-align: center;
             color: var(--title-text-color);
+
+            @media screen and (min-width: 1200px) {
+                margin-bottom: 50px;
+                font-size: 36px;
+                line-height: 1.17;
+            }
         }
 }
 
