--- a/sass/layots/_client.scss
+++ b/sass/layots/_client.scss
@@ -1,18 +1,16 @@
 .client-list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 30px;
 
-    &__item {
-            width: calc((100% - 150px) / 6);
-            height: 92px;
-        }
     
         &__link {
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 100%;
-            height: 100%;
+            width: 210px;
+            height: 92px;
             border: 1px solid var(--icon-color);
             border-radius: 4px;
             fill: var(--icon-color);
@@ -22,6 +20,14 @@
             &:focus {
                 border: 1px solid var(--hover-bacground-color);
                 fill: var(--hover-bacground-color);
+            }
+            
+            @media screen and (min-width: 768px) {
+                width: 226px;
+            }
+
+            @media screen and (min-width: 768px) {
+                width: 170px;
             }
         }
 }
