--- a/sass/layots/_features.scss
+++ b/sass/layots/_features.scss
@@ -1,6 +1,8 @@
 .features {
     display: flex;
     gap: 30px;
+    justify-content: center;
+    flex-wrap: wrap;
 
     &__item {
             width: 270px;
