--- a/sass/layots/_footer.scss
+++ b/sass/layots/_footer.scss
@@ -4,16 +4,49 @@
     padding-bottom: 60px;
 }
 
+.footer-tablet{
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+            margin-bottom: 60px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: flex;
+            align-items: baseline;
+        }
+}
+
 .footer-wrap {
-    display: flex;
-    align-items: baseline;
+display: block;
+    text-align: center;
+    gap: 60px;
+
+    @media screen and (max-width: 767.5px) {
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        align-items: baseline;
+        text-align: start;
+    }
 }
 
 .wrap {
-    margin-right: 70px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+@media screen and (max-width: 767.5px) {
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        margin-left: 76px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 0;
+        margin-right: 70px;
+    }
 }
 
 
@@ -55,7 +88,17 @@
 /*Fotter social*/
 
 .footer-social{
-    margin-right: auto;
+    margin-left: auto;
+
+    @media screen and (max-width: 767.5px){
+        margin-bottom: 60px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        margin-left: auto;
+    }
+        
+    
+
     &__title {
             margin-bottom: 20px;
             font-weight: 700;
@@ -104,8 +147,14 @@
 /*footer mail*/
 
 .mailing {
-    margin-left: 93px;
-    justify-content: flex-end;
+    @media screen and (max-width: 767.5px) {
+            margin-right: auto;
+            margin-left: auto;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            margin-left: auto;
+        }
 
     &__text {
         margin-bottom: 20px;
@@ -114,11 +163,21 @@
         font-weight: 700;
         line-height: 1.17;
         letter-spacing: 0.03em;
-        text-align: left;
+        text-align: center;
+
+        @media screen and (min-width: 1200px) {
+            text-align: start;
+        }
+
     }
         &__form {
-            display: flex;
-            align-items: flex-end
+            width: 100%;
+
+            @media screen and (min-width: 1200px) {
+                display: flex;
+                align-items: flex-end;
+            }
+
         }
     
         &__lable {
@@ -127,7 +186,7 @@
         }
 
         &__input {
-            width: 358px;
+            width: 100%;
             height: 50px;
             padding: 8px;
             font-family: inherit;
@@ -138,7 +197,23 @@
             margin-right: 12px;
             color: #FFFFFF99;
             letter-spacing: 0.03em;
-            padding: 15px 16px
+            padding: 15px 16px;
+
+            @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+                margin-left: auto;
+                margin-right: auto;
+                width: 450px;
+            }
+
+            @media screen and (max-width: 1199.5px) {
+                margin-bottom: 20px;
+                display: block;
+            }
+
+            @media screen and (min-width: 1200px) {
+                width: 358px;
+            }
+
         }
 
         &__icon {
@@ -165,6 +240,11 @@
             height: 50px;
             padding: 10px 28px;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+            @media screen and(max-width: 1200px) {
+                margin-right: auto;
+                margin-left: auto;
+            }
     
             &:focus,
             &:hover {
