--- a/sass/layots/_header.scss
+++ b/sass/layots/_header.scss
@@ -1,56 +1,100 @@
-
-.page-header {
+// Header
+.header {
     border-bottom: 1px solid #ececec;
-    &::after {
-            content: " ";
-            width: 1600px;
-            height: 1px;
-            background-color: var(--line-color);
-            display: block;
-        }
+
 }
 
+// Header logo
+.site-nav__logo {
+    color: #000000;
 
-.main-nav {
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.17;
+
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        margin-right: 88px;
+        padding-top: 26px;
+        padding-bottom: 26px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.2;
+        margin-right: 93px;
+        padding-top: 24px;
+        padding-bottom: 25px;
+    }
+}
+
+.header-links {
+    display: flex;
+
+    @media screen and (min-width: 768px) {
+        width: 100%;
+    }
+}
+
+// Site navigation
+.header__nav {
     display: flex;
     align-items: center;
 }
-
 
 .site-nav {
-    display: flex;
-    margin-left: 92px;
-    gap: 50px;
+    margin-bottom: 64px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        margin-bottom: 0;
+    }
 }
 
-.header-nav {
-    display: flex;
-    align-items: center;
+.site-nav__list {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        margin-bottom: 0;
+    }
 }
 
 .site-nav__link {
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
     color: var(--title-text-color);
+
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 30px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
+
+    text-decoration: none;
+
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        color: var(--button-bacground-color);
-        }
-    
-        &.current {
-            position: relative;
-            color: var(--button-bacground-color);
-    
-        }
-    
-        &.current::after {
+    @media screen and (min-width: 425px) {
+        font-size: 40px;
+    }
+
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        line-height: 1.14;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
+
+    &--current {
+        position: relative;
+        color: var(--accent-hover-color);
+        text-decoration: none;
+    }
+
+    @media screen and (min-width: 768px) {
+        &--current::after {
             content: '';
             position: absolute;
             bottom: 0;
@@ -58,68 +102,161 @@
             height: 4px;
             width: 100%;
             border-radius: 2px;
-            background-color: var(--button-bacground-color);
+            background-color: var(--accent-hover-color);
         }
-                &:hover,
-                &.link:focus {
-                    color: var(--button-bacground-color);
-                }
-        
-                &.current {
-                    position: relative;
-                    color: var(--button-bacground-color);
-        
-                }
-        
-                &.current::after {
-                    content: '';
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                    height: 4px;
-                    width: 100%;
-                    border-radius: 2px;
-                    background-color: var(--button-bacground-color);
-                }
+    }
+
+    &:focus,
+    &:hover {
+        color: var(--accent-hover-color);
+    }
 }
 
+.site-nav__item:not(:last-child) {
+    @media screen and (max-width: 767.5px) {
+        margin-bottom: 32px;
+    }
 
+    @media screen and (min-width: 768px) {
+        margin-right: 50px;
+    }
+}
 
+// Header contact info
+.header__contact {
+    @media screen and (max-width: 767.5px) {
+        margin-top: auto;
+    }
 
-.contacts {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+    }
+}
+
+.contact-info {
+    @media screen and (max-width: 767.5px) {
+        margin-bottom: 64px;
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 32px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+    }
+}
+
+.contact-info__link:focus,
+.contact-info__link:hover {
+    color: var(--accent-hover-color);
+}
+
+.contact-info__link {
     display: flex;
-    margin-left: auto;
-    gap: 50px;
+    color: var(--primary-text-color);
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+
     text-decoration: none;
 
-    &__item {
-            width: 100%;
-            height: 100%;
-        }
-    
-        &__link {
-            display: flex;
-            width: 100%;
-            height: 100%;
-            align-items: center;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 1.14;
-            letter-spacing: 0.02em;
-            color: var(--primary-text-color);
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-            &:hover,
-            &:focus {
-                color: var(--hover-contacts-icon-color);
-            }
-        }
-    
-        &__icon {
-            margin-right: 10px;
-            fill: currentColor;
-        }
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 425px) {
+        font-size: 34px;
+    }
+
+    @media screen and (min-width: 768px) {
+        font-size: 12px;
+        line-height: 1.17;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.14;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        margin-bottom: 0;
+        align-items: center;
+    }
 }
 
+.contact-info__icon {
+    display: flex;
 
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    &-mail,
+    &-tel {
+        margin-right: 10px;
+        fill: currentColor;
+
+        @media screen and (max-width: 767.5px) {
+            display: none;
+        }
+    }
+
+    &:hover,
+    &:focus {
+        color: var(--logo-text-color);
+    }
+
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+    }
+}
+
+.contact-info__item:not(:last-child) {
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        margin-bottom: 10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+    }
+}
+
+.contact__social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
+
+.contact__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--logo-text-color);
+    text-decoration: none;
+
+    @media screen and (min-width: 425px) {
+        font-size: 18px;
+    }
+}
+
+.contact__item {
+    padding-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+
+    &:last-child {
+        margin-right: 0px;
+        padding-right: 0px;
+        border: none;
+    }
+}
