--- a/sass/layots/_team.scss
+++ b/sass/layots/_team.scss
@@ -1,18 +1,41 @@
 .section-team {
-    padding: 94px;
+    padding-top: 94px;
+        padding-bottom: 94px;
 }
 
 .team-list {
-    display: flex;
-    gap: 30px;
+justify-content: center;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+
+
 
     &__item {
+        max-width: 450px;
             background: var(--bacground-color);
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
                 0px 2px 1px rgba(0, 0, 0, 0.2);
             border-radius: 0px 0px 4px 4px;
+
+@media screen and (max-width: 767.5px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
         }
-}
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
+    }
 
 .team-wrap {
     padding-top: 30px;
@@ -42,6 +65,7 @@
                 0px 2px 1px rgba(0, 0, 0, 0.2);
             border-radius: 0px 0px 4px 4px;
         }
+}
 }
 
 
@@ -75,8 +99,4 @@
                     fill: currentColor;
                 }
         }   
-        
-
-}
-
-
+    }
