--- a/sass/layots/_filters.scss
+++ b/sass/layots/_filters.scss
@@ -1,8 +1,19 @@
 .portfolio-filters {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     gap: 8px;
     margin-bottom: 50px;
+
+    @media screen and (min-width: 768px){
+
+        justify-content: center;
+    }
+
+          @media screen and (min-width: 1200px) {
+              justify-content: center;
+              margin-bottom: 50px;
+          }
 
     &__button.current {
             border: none;
