--- a/css/main.css
+++ b/css/main.css
@@ -520,9 +520,21 @@ body {
 
 .portfolio-filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   gap: 8px;
   margin-bottom: 50px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-filters {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-filters {
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 .portfolio-filters__button.current {
   border: none;
@@ -997,17 +1009,16 @@ body {
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 650px;
+  max-width: 450px;
   background-color: #fff;
-  border-radius: 4px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 40px;
-  transform: translate(-50%, -50%) rotate(0);
-  transition: transform 400ms linear, border-radius 500ms linear;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 40px;
+  transition: transform 400ms linear, border-radius 500ms linear;
 }
 @media screen and (min-width: 375px) and (max-width: 1199.5px) {
   .modal {
@@ -1200,29 +1211,51 @@ body {
   }
 }
 
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 .portfolio__item {
-  width: calc((100% - 60px) / 3);
+  display: flex;
+  max-width: 100%;
+}
+@media screen and (max-width: 767.5px) {
+  .portfolio__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 .portfolio__link {
   text-decoration: none;
-  display: block;
+  display: flex;
+  flex-direction: column;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  flex-grow: 1;
 }
 .portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 .portfolio__link:hover .description-text, .portfolio__link:focus .description-text {
   transform: translateY(0);
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .portfolio__link {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__link {
+    width: 370px;
+  }
 }
 .portfolio__wrap {
   display: block;
   padding: 20px 24px;
   border: 1px solid var(--border-color);
+  flex-grow: 1;
 }
 .portfolio__title {
   margin-bottom: 4px;
