--- a/sass/layots/_modal.scss
+++ b/sass/layots/_modal.scss
@@ -13,17 +13,19 @@ position: fixed;
 }
 
 .modal {
-    width: 528px;
-    height: 581px;
+position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 650px;
+    max-width: 450px;
     background-color: #fff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     padding: 40px;
-    transform: translate(-50%, -50%) rotate(0);
+
     transition: transform 400ms linear, border-radius 500ms linear;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
     
     @media screen and (min-width: 375px) and (max-width: 1199.5px) {
             max-height: 609px;
