--- a/sass/layots/_portfolio.scss
+++ b/sass/layots/_portfolio.scss
@@ -1,24 +1,46 @@
 .portfolio {
+    @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    }
 
     &__item {
-            width: calc((100% - 60px) / 3);
+
+        display: flex;
+            max-width: 100%;
+
+@media screen and (max-width: 767.5px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+
         }
     &__link {
         text-decoration: none;
-        display: block;
+        display: flex;
+        flex-direction: column;
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        flex-grow: 1;
         &:hover,
         &:focus {
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
                     1px 4px 6px rgba(0, 0, 0, 0.16);
+                    cursor: pointer;
             }
                         &:hover .description-text,
                         &:focus .description-text {
                             transform: translateY(0);
                         }
+
+                  @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+                      width: 354px;
+                  }
+        
+                  @media screen and (min-width: 1200px) {
+                      width: 370px;
+                  }
         }
          
 
@@ -26,6 +48,7 @@
             display: block;
             padding: 20px 24px;
             border: 1px solid var(--border-color);
+            flex-grow: 1;
         }
     
         &__title {
@@ -64,6 +87,8 @@ position: absolute;
     position: relative;
     overflow: hidden;
 }
+
+
 
 
 
