--- a/sass/layots/_client.scss
+++ b/sass/layots/_client.scss
@@ -6,6 +6,7 @@
 
     
         &__link {
+            border: 1px solid #AFB1B8;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -15,6 +16,7 @@
             border-radius: 4px;
             fill: var(--icon-color);
             transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     
             &:hover,
             &:focus {
@@ -26,7 +28,7 @@
                 width: 226px;
             }
 
-            @media screen and (min-width: 768px) {
+            @media screen and (min-width: 1200px) {
                 width: 170px;
             }
         }
