--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,21 +1,19 @@
 .button {
-    display: flex;
-        margin-right: auto;
+    display: block;
         margin-left: auto;
-        color: var(--icon-bacground-color);
-        background-color: var(--button-bacground-color);
-        box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.15);
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-weight: 700;
+        margin-right: auto;
         font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
+        padding: 10px 32px;
+        min-width: 216px;
         font-family: inherit;
-        min-width: 118px;
-        padding: 10px 52px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-weight: 700;
+        line-height: 1.88;
+        letter-spacing: .06em;
+        border: none;
+        box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+        border-radius: 4px;
+        color: var(--bacground-color);
+        background-color: var(--button-bacground-color);
         &:hover,
         &:focus {
                 background-color: var(--accent-hover-color)
