--- a/sass/layots/_header.scss
+++ b/sass/layots/_header.scss
@@ -1,12 +1,12 @@
 // Header
-.header {
-    border-bottom: 1px solid #ececec;
+.page-header {
+border-bottom: 1px solid #ececec;
+}
 
-    &__nav {
-            display: flex;
-            align-items: center;
-        }
-
+.header__nav{
+    display: flex;
+    align-items: center;
+        height: 80px;
 }
 
 // Header logo
@@ -48,79 +48,78 @@
 
 
 .site-nav {
-    margin-bottom: 64px;
-
+display: block;
+    gap: 50px;
     @media screen and (min-width: 768px) {
         display: flex;
         align-items: center;
         margin-bottom: 0;
+        height: 80px;
+    }
+
+
+    &__list {
+    @media screen and (min-width: 768px) {
+        display: flex;
     }
 }
 
-&__list {
-    @media screen and (min-width: 768px) {
-        display: flex;
-        margin-bottom: 0;
-    }
+    
 
-&__link {
+    &__link {
     display: block;
-    color: var(--title-text-color);
-
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-
-    text-decoration: none;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    @media screen and (min-width: 425px) {
-        font-size: 40px;
-    }
-
-    @media screen and (min-width: 768px) {
-        font-size: 14px;
-        line-height: 1.14;
-        padding-top: 32px;
-        padding-bottom: 32px;
-    }
-
-    &--current {
-        position: relative;
-        color: var(--accent-hover-color);
+        color: #212121;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 1.18;
+        letter-spacing: .02em;
         text-decoration: none;
-    }
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        @media screen and (min-width: 425px) {
+            font-size: 40px;
+        }
 
-    @media screen and (min-width: 768px) {
-        &--current::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            height: 4px;
-            width: 100%;
-            border-radius: 2px;
-            background-color: var(--accent-hover-color);
+        @media screen and (min-width: 768px) {
+            font-size: 14px;
+            line-height: 1.14;
+            padding-top: 32px;
+            padding-bottom: 32px;
+        }
+
+        &--current {
+            position: relative;
+            color: var(--accent-hover-color);
+
+        }
+
+        @media screen and (min-width: 768px) {
+            &--current::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                height: 4px;
+                width: 100%;
+                border-radius: 2px;
+                background-color: var(--accent-hover-color);
+            }
+        }
+
+        &:focus,
+        &:hover {
+            color: var(--accent-hover-color);
         }
     }
 
-    &:focus,
-    &:hover {
-        color: var(--accent-hover-color);
-    }
-}
+    &__item:not(:last-child) {
+        @media screen and (max-width: 767.5px) {
+            margin-bottom: 32px;
+        }
 
-&__item:not(:last-child) {
-    @media screen and (max-width: 767.5px) {
-        margin-bottom: 32px;
+        @media screen and (min-width: 768px) {
+            margin-right: 50px;
+        }
     }
-
-    @media screen and (min-width: 768px) {
-        margin-right: 50px;
-    }
-}
 }
 
 // Header contact info
@@ -138,10 +137,10 @@
 
 .contact-info {
     @media screen and (max-width: 767.5px) {
-        margin-bottom: 64px;
         display: flex;
         flex-direction: column-reverse;
         gap: 32px;
+        margin-bottom: 64px;
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199.5px) {
@@ -152,80 +151,82 @@
 
     @media screen and (min-width: 1200px) {
         display: flex;
+        margin: 0;
+        padding: 0;
     }
 
-&__link {
-    display: flex;
-    color: var(--primary-text-color);
+    &__link {
+        display: flex;
+        color: var(--primary-text-color);
 
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.18;
+        letter-spacing: 0.02em;
 
-    text-decoration: none;
+        text-decoration: none;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: 425px) {
-        font-size: 34px;
-    }
+        @media screen and (min-width: 425px) {
+            font-size: 34px;
+        }
 
-    @media screen and (min-width: 768px) {
-        font-size: 12px;
-        line-height: 1.17;
-    }
+        @media screen and (min-width: 768px) {
+            font-size: 12px;
+            line-height: 1.17;
+        }
 
-    @media screen and (min-width: 1200px) {
-        font-size: 14px;
-        line-height: 1.14;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        margin-bottom: 0;
-        align-items: center;
-    }
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+            line-height: 1.14;
+            padding-top: 32px;
+            padding-bottom: 32px;
+            margin-bottom: 0;
+            align-items: center;
+        }
 
         &:focus,
         &:hover {
             color: var(--accent-hover-color);
         }
-}
+    }
 
-&__icon {
-    display: flex;
+    &__icon {
+        display: flex;
 
-    align-items: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        align-items: center;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &-mail,
-    &-tel {
-        margin-right: 10px;
-        fill: currentColor;
+        &-mail,
+        &-tel {
+            margin-right: 10px;
+            fill: currentColor;
 
-        @media screen and (max-width: 767.5px) {
-            display: none;
+            @media screen and (max-width: 767.5px) {
+                display: none;
+            }
+        }
+
+        &:hover,
+        &:focus {
+            color: var(--logo-text-color);
+        }
+
+        @media screen and (min-width: 768px) {
+            justify-content: center;
         }
     }
 
-    &:hover,
-    &:focus {
-        color: var(--logo-text-color);
-    }
+    &__item:not(:last-child) {
+        @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+            margin-bottom: 10px;
+        }
 
-    @media screen and (min-width: 768px) {
-        justify-content: center;
+        @media screen and (min-width: 1200px) {
+            margin-right: 30px;
+        }
     }
-}
-
-&__item:not(:last-child) {
-    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
-        margin-bottom: 10px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        margin-right: 30px;
-    }
-}
 }
 
 .contact__social {
@@ -240,7 +241,7 @@
 
 .contact__link {
     font-weight: 500;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.22;
     letter-spacing: 0.02em;
     color: var(--logo-text-color);
