--- a/sass/layots/_hero.scss
+++ b/sass/layots/_hero.scss
@@ -20,7 +20,7 @@
     text-align: center;
     padding: 118px 0;
     max-width: 1600px;
-    height: 400px;
+
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
@@ -52,8 +52,7 @@
         }
     
         @media screen and (min-width: 1200px) {
-            height: 600px;
-            display: flex;
+padding: 200px 0;
             align-items: center;
             background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
                 url(../images/Img-team-1600.jpg);
