--- a/sass/layots/_mobile-menu.scss
+++ b/sass/layots/_mobile-menu.scss
@@ -7,7 +7,7 @@
     height: 40px;
     margin-left: auto;
     border: none;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
 
     &:focus,
@@ -18,6 +18,10 @@
     @media screen and (min-width: 768px) {
         display: none;
     }
+}
+
+.menu-toggle__icon{
+    z-index: 1;
 }
 
 .menu-toggle__close {
@@ -33,10 +37,10 @@
 }
 
 .header-links {
-    display: flex;
     width: 100%;
+    height: 80px;
 
-    &.is-open~.menu-toggle .menu-toggle__close {
+    &.is-open ~ .menu-toggle .menu-toggle__close {
         display: block;
     }
 
@@ -53,10 +57,10 @@
 
         flex-direction: column;
         overflow-y: scroll;
-
         padding: 48px 40px;
         background-color: #ffff;
         transform: translateY(-100%);
+        z-index: 1;
         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
