--- a/sass/layots/_portfolio.scss
+++ b/sass/layots/_portfolio.scss
@@ -19,6 +19,7 @@
         }
     &__link {
         text-decoration: none;
+        width: 450px;
         display: flex;
         flex-direction: column;
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
