--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ h6 {
 
 ul,
 li {
+  margin: 0;
   padding-left: 0;
   list-style: none;
 }
@@ -350,13 +351,18 @@ body {
 }
 .contact-info__link {
   display: flex;
-  color: var(--primary-text-color);
+  color: #757575;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.18;
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .contact-info__link {
+    color: var(--accent-hover-color);
+  }
 }
 @media screen and (min-width: 425px) {
   .contact-info__link {
@@ -380,6 +386,40 @@ body {
   }
 }
 .contact-info__link:focus, .contact-info__link:hover {
+  color: var(--accent-hover-color);
+}
+.contact-info__link-mail {
+  display: flex;
+  color: #757575;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 425px) {
+  .contact-info__link-mail {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact-info__link-mail {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-info__link-mail {
+    font-size: 14px;
+    line-height: 1.14;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-bottom: 0;
+    align-items: center;
+  }
+}
+.contact-info__link-mail:focus, .contact-info__link-mail:hover {
   color: var(--accent-hover-color);
 }
 .contact-info__icon {
@@ -419,6 +459,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+}
+@media screen and (min-width: 316px) and (max-width: 767px) {
+  .contact__social {
+    flex-wrap: nowrap;
+  }
 }
 @media screen and (min-width: 768px) {
   .contact__social {
@@ -616,7 +661,11 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--title-text-color);
-  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .features__title {
+    text-align: center;
+  }
 }
 .features__text {
   font-weight: 400;
@@ -753,17 +802,29 @@ body {
 .client-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 30px;
+}
+.client-list__item {
+  width: calc((100% - 30px) / 2);
+  height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .client-list__item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client-list__item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 .client-list__link {
   border: 1px solid #AFB1B8;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 210px;
+  width: 100%;
   height: 92px;
-  border: 1px solid var(--icon-color);
   border-radius: 4px;
   fill: var(--icon-color);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -795,6 +856,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  margin-bottom: 20px;
   color: var(--modal-icon-color);
 }
 .footer-logo__color--dark {
@@ -807,9 +869,6 @@ body {
   .footer-logo {
     font-size: 26px;
     line-height: 1.2;
-    margin-right: 93px;
-    padding-top: 24px;
-    padding-bottom: 25px;
   }
 }
 
@@ -817,7 +876,7 @@ body {
   .footer-tablet {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 60px;
   }
 }
@@ -874,6 +933,7 @@ body {
 .footer-contacts {
   font-style: normal;
   line-height: 1.7;
+  margin: 0;
 }
 
 .footer-contacts__item:not(:last-child) {
@@ -1174,6 +1234,7 @@ body {
   justify-content: center;
   line-height: 24px;
   margin-bottom: 30px;
+  margin-top: 20px;
   align-items: center;
 }
 
@@ -1217,19 +1278,15 @@ body {
   letter-spacing: 0.01em;
 }
 
-.modal-lable__checkbox {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  line-height: 24px;
-  margin-bottom: 30px;
-  align-items: center;
-}
-
 .agreement-text {
-  font-size: 12px;
-  line-height: 1.17;
   margin-left: 8.38px;
+}
+@media screen and (min-width: 370px) and (max-width: 1199px) {
+  .agreement-text {
+    margin-left: 8.38px;
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 
 .agreement-condition {
