--- a/sass/layots/_client.scss
+++ b/sass/layots/_client.scss
@@ -1,8 +1,20 @@
 .client-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 30px;
+
+    &__item {
+        width: calc((100% - 30px) / 2);
+        height: 92px;
+
+        @media screen and (min-width: 768px) {
+            width: calc((100% - 60px) / 3);
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 150px) / 6);
+        }
+    }
 
     
         &__link {
@@ -10,9 +22,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 210px;
+            width: 100%;
             height: 92px;
-            border: 1px solid var(--icon-color);
             border-radius: 4px;
             fill: var(--icon-color);
             transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -23,6 +34,8 @@
                 border: 1px solid var(--hover-bacground-color);
                 fill: var(--hover-bacground-color);
             }
+
+            
             
             @media screen and (min-width: 768px) {
                 width: 226px;
@@ -32,7 +45,4 @@
                 width: 170px;
             }
         }
-}
-
-
-
+    }
