--- a/sass/layots/_header.scss
+++ b/sass/layots/_header.scss
@@ -157,7 +157,7 @@ display: block;
 
     &__link {
         display: flex;
-        color: var(--primary-text-color);
+        color: #757575;
 
         font-weight: 500;
         font-size: 20px;
@@ -167,6 +167,10 @@ display: block;
         text-decoration: none;
 
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        @media screen and (min-width: 320px) and (max-width: 767px) {
+            color: var(--accent-hover-color)
+        }
 
         @media screen and (min-width: 425px) {
             font-size: 34px;
@@ -191,6 +195,43 @@ display: block;
             color: var(--accent-hover-color);
         }
     }
+
+    &__link-mail{
+            display: flex;
+            color: #757575;
+    
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 1.18;
+            letter-spacing: 0.02em;
+    
+            text-decoration: none;
+    
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            @media screen and (min-width: 425px) {
+                font-size: 24px;
+            }
+    
+            @media screen and (min-width: 768px) {
+                font-size: 12px;
+                line-height: 1.17;
+            }
+    
+            @media screen and (min-width: 1200px) {
+                font-size: 14px;
+                line-height: 1.14;
+                padding-top: 32px;
+                padding-bottom: 32px;
+                margin-bottom: 0;
+                align-items: center;
+            }
+    
+            &:focus,
+            &:hover {
+                color: var(--accent-hover-color);
+            }
+        }
 
     &__icon {
         display: flex;
@@ -233,6 +274,10 @@ display: block;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+
+    @media screen and (min-width: 316px) and (max-width:767px) {
+flex-wrap: nowrap;
+    }
 
     @media screen and (min-width: 768px) {
         display: none;
